--- a/CS-UNSA-cs102O-OAD.cbp
+++ b/CS-UNSA-cs102O-OAD.cbp
@@ -34,6 +34,7 @@
 		</Compiler>
 		<Unit filename="MainCell.cpp" />
 		<Unit filename="MainCell.h" />
+		<Unit filename="MathFunctions.h" />
 		<Unit filename="NodeCell.cpp" />
 		<Unit filename="NodeCell.h" />
 		<Unit filename="Nodo.cpp" />
